<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <ImageView
        android:id="@+id/expend_add_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/keyboard_backspace"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:contentPadding="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:fontFamily="sans-serif"
                    android:text="金额："
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/expend_add_money"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:hint="@string/expendnumber"
                    android:inputType="text"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical|right"/>
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_payout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_payout"
                    android:background="@color/background_transparent"
                    android:gravity="center_vertical"  />

                <Button
                    android:id="@+id/button_income"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_income"
                    android:background="@color/background_transparent"
                    android:gravity="center_vertical"/>

            </LinearLayout>

            <GridView
                android:id="@+id/gridView"
                android:layout_marginTop="10dp"
                android:numColumns="5"
                android:horizontalSpacing="10dp"
                android:verticalSpacing="10dp"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="120dp"></GridView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:fontFamily="sans-serif"
                    android:text="种类："
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/select_type"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:inputType="text"
                    android:hint="@string/hint_selecttype"
                    android:gravity="center"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/select_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:fontFamily="sans-serif"
                    android:text="时间："
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/expend_add_date"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:inputType="text"
                    android:gravity="center"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:fontFamily="sans-serif"
                    android:text="名称："
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/expend_add_name"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:hint="@string/expend_name"
                    android:inputType="text"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical|right"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:fontFamily="sans-serif"
                    android:text="备注："
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="center"/>
                <EditText
                    android:id="@+id/expend_add_remark"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:hint="@string/string_remark"
                    android:inputType="text"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical|right"/>
            </RelativeLayout>

            <Button
                android:id="@+id/expanded_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/expend_add"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>